<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_profile"
            android:layout_width="202dp"
            android:layout_height="209dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="105dp"
            android:layout_marginBottom="463dp"
            android:contentDescription="@string/photo_profile"
            android:src="@drawable/photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/putya"
            android:text="@string/putya"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/my_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/myemail"
            android:text="@string/myemail"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/my_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/my_address"
            app:layout_constraintTop_toBottomOf="@+id/my_address" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="316dp"
            android:contentDescription="@string/name"
            android:text="@string/name"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/batam"
            android:text="@string/batam"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/my_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/my_name"
            app:layout_constraintTop_toBottomOf="@+id/my_name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/email"
            android:text="@string/email"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/my_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/birthday"
            android:text="@string/birthday"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/my_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/my_email"
            app:layout_constraintTop_toBottomOf="@+id/my_email" />

        <TextView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/birth"
            android:text="@string/birth"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/address"
            android:text="@string/address"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>