<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutFragment">

        <ImageView
            android:id="@+id/icon_about"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/iconbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trivia_icon" />

        <TextView
            android:id="@+id/rulesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/rules_text"
            android:text="@string/about_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_about" />

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="35dp"
            android:layout_height="29dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="379dp"
            android:contentDescription="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>