<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trivia_rules"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RulesFragment">

        <ImageView
            android:id="@+id/trivia_icon_rules"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/trivia_icon_rules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trivia_icon" />

        <TextView
            android:id="@+id/rulesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/rules_text"
            android:text="@string/rules_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trivia_icon_rules" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="46dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="349dp"
            android:contentDescription="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>