<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.diki.idn.codelabquiz.GameFragment">
    <data>

        <variable
            name="game"
            type="com.diki.idn.codelabquiz.GameFragment" />
    </data>

    <ScrollView
        android:id="@+id/sv_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/game_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/question_icon"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_header_height"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:contentDescription="@string/question_icon"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/question_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ask" />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="344dp"
                android:layout_height="110dp"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:contentDescription="@string/questions"
                android:text="@{game.currentQuestions.text}"
                android:textColor="#000"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_icon" />

            <RadioGroup
                android:id="@+id/rg_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:animateLayoutChanges="true"
                android:contentDescription="@string/questionrg"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_text">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{game.answer[0]}"
                    android:textSize="16sp"
                    tools:text="Japan" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{game.answer[1]}"
                    android:textSize="16sp"
                    tools:text="Indonesia" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{game.answer[2]}"
                    android:textSize="16sp"
                    tools:text="Bangladesh" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{game.answer[4]}"
                    android:textSize="16sp"
                    tools:text="Burma" />
            </RadioGroup>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="119dp"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"
                android:background="#305581"
                android:contentDescription="@string/submit_button"
                android:text="@string/submit_button"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="@+id/rg_game"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/rg_game"
                app:layout_constraintTop_toBottomOf="@+id/rg_game" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>